// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseCommonConfig > dev.xxx 1`] = `
{
  "dev": {
    "hmr": false,
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "distPath": {
      "html": "html",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "compress": false,
    "headers": {
      "X-Custom-Foo": "bar",
    },
    "historyApiFallback": true,
    "host": "xxx.xxx",
    "https": {
      "cert": "xxx",
      "key": "xxxx",
    },
    "port": 8081,
    "publicDir": false,
  },
  "tools": {},
}
`;

exports[`parseCommonConfig > dev.xxx 2`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "distPath": {
      "html": "html",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
  "tools": {},
}
`;

exports[`parseCommonConfig > html.faviconByEntries 1`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "favicon": [Function],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "distPath": {
      "html": "html",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
}
`;

exports[`parseCommonConfig > html.faviconByEntries 2`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "favicon": [
      "/https/www.foo.com/default.ico",
      [Function],
    ],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "distPath": {
      "html": "html",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
}
`;

exports[`parseCommonConfig > html.faviconByEntries 3`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "inject": [Function],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "distPath": {
      "html": "html",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
}
`;

exports[`parseCommonConfig > html.faviconByEntries 4`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "inject": [
      "body",
      [Function],
    ],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "distPath": {
      "html": "html",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
}
`;

exports[`parseCommonConfig > html.metaByEntries 1`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "meta": [Function],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "distPath": {
      "html": "html",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
}
`;

exports[`parseCommonConfig > html.metaByEntries 2`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "meta": [
      {
        "charset": {
          "charset": "UTF-8",
        },
      },
      [Function],
    ],
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "distPath": {
      "html": "html",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
}
`;

exports[`parseCommonConfig > html.templateByEntries 1`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "outputStructure": "nested",
    "template": [Function],
    "title": "",
  },
  "output": {
    "distPath": {
      "html": "html",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
}
`;

exports[`parseCommonConfig > html.templateByEntries 2`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "outputStructure": "nested",
    "template": [
      "static/index.html",
      [Function],
    ],
    "title": "",
  },
  "output": {
    "distPath": {
      "html": "html",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
}
`;

exports[`parseCommonConfig > html.templateParametersByEntries 1`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "outputStructure": "nested",
    "templateParameters": [Function],
    "title": "",
  },
  "output": {
    "distPath": {
      "html": "html",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
}
`;

exports[`parseCommonConfig > html.templateParametersByEntries 2`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "outputStructure": "nested",
    "templateParameters": [
      {
        "name": "jack",
      },
      [Function],
    ],
    "title": "",
  },
  "output": {
    "distPath": {
      "html": "html",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
}
`;

exports[`parseCommonConfig > html.titleByEntries 1`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "outputStructure": "nested",
    "title": [
      "",
      [Function],
    ],
  },
  "output": {
    "distPath": {
      "html": "html",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
}
`;

exports[`parseCommonConfig > html.titleByEntries 2`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "outputStructure": "nested",
    "title": [
      "Default",
      [Function],
    ],
  },
  "output": {
    "distPath": {
      "html": "html",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
}
`;

exports[`parseCommonConfig > output.cssModuleLocalIdentName 1`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "cssModules": {
      "localIdentName": "[local]-[hash:base64:6]",
    },
    "distPath": {
      "html": "html",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
}
`;

exports[`parseCommonConfig > output.disableCssModuleExtension 1`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "cssModules": {
      "auto": [Function],
    },
    "disableCssModuleExtension": true,
    "distPath": {
      "html": "html",
    },
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
}
`;

exports[`parseCommonConfig > output.enableInlineScripts 1`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "distPath": {
      "html": "html",
    },
    "inlineScripts": true,
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
}
`;

exports[`parseCommonConfig > output.enableInlineStyles 1`] = `
{
  "dev": {
    "progressBar": true,
    "writeToDisk": true,
  },
  "html": {
    "outputStructure": "nested",
    "title": "",
  },
  "output": {
    "distPath": {
      "html": "html",
    },
    "inlineStyles": true,
    "overrideBrowserslist": {
      "web": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
    "polyfill": "entry",
    "targets": [
      "web",
    ],
  },
  "server": {
    "publicDir": false,
  },
}
`;
